--- a/Nosotros/nosotros.html
+++ b/Nosotros/nosotros.html
@@ -76,41 +76,45 @@
 
 <header class="head1"> <br>
   <div class="container">
-    <div class="row">  
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInRightBig animate__delay-1s"  align="justify"> <br>
-       <h1 class="titulo"> ¿Quienes somos?</h1>
-       <font class="contenido">Somos un negocio familiar preocupado por la nutrición y alimentación de nuestros clientes. Sabemos que el ritmo de vida actual no permite elaborar
-         productos saludables en casa. Por lo tanto, hemos decidido ser la alternativa para que nuestros clientes puedan seguir alimentandose bien y de manera saludable. Al mismo tiempo
-         que disfrutan de alimentos y bebidas atractivos, deliciosos y novedosos.
-       </font>
-      </div>
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-1s"> 
-        <img src="../imagenes/team.svg" alt="" class="svg">
-      </div> 
-    </div> <hr>
     <div class="row">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInLeftBig animate__delay-2s" align="justify"> <br>
-        <h1 class="titulo">Misión</h1>
-        <font class="contenido">Elaboramos productos alimenticios nutritivos y saludables bajos en azucar y grasas y libres de conservantes que ayuden a mejorar la calidad de vida de la población llanera con sobrepeso o que desea tener y mantener hábitos alimenticios más saludables.</font> <br> <br>
-        <h1 class="titulo">Visión</h1>
-        <font class="contenido" >Para el año 2025 ser la empresa de referencia a nivel regional en la elaboración y preparación de alimentos nutritivos y saludables para la población llanera que desea adquirir y mantener habitos alimenticios saludables en su dia a dia, mediante la elaboración de productos atractivos, deliciosos y novedosos. </font> <br><br>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6" >
+        <div style= "height: fit-content;">
+          <h1 class="titulo">¿Quienes somos?</h1>
+          <font  class="contenido">Somos un negocio familiar preocupado por la nutrición y alimentación de nuestros clientes. Sabemos que el ritmo de vida actual no permite elaborar
+            productos saludables en casa. Por lo tanto, hemos decidido ser la alternativa para que nuestros clientes puedan seguir alimentandose bien y de manera saludable. Al mismo tiempo
+            que disfrutan de alimentos y bebidas atractivos, deliciosos y novedosos.
+          </font>
+        </div>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-6 "> 
+        <div>
+          <img style="max-width:95%;" src="../imagenes/mision.png" alt="personal" >
+        </div>
       </div> 
-      <div class="col-12 col-sm-12 col-md-12 col-lg-6 caja animate__animated animate__fadeInRightBig animate__delay-2s"> <br> <br>
-        <img src="../imagenes/progreso.svg" alt="" class="svg">
-      </div> 
-    </div> 
+    </div>
   </div>
 </header>
 
 <header class="head2"> 
   <div class="container"> 
-    <div class="row"> 
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12  caja2" align="center"> <br> <br>
-        <h1 class="titulo">Conoce más</h1> <br>
-        <a href="../Contactenos/index.html" class="boton hvr-grow hvr-sweep-to-top">Contáctanos.</a> <br> <br> <br>
+    <div style="text-align: center;" class="row"> 
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12  caja2" align="right">
+        <h1 class="titulo">Misión</h1>
+        <font style="text-align: right;" class="contenido">Elaboramos productos alimenticios nutritivos y saludables bajos en azucar y grasas y libres de conservantes que ayuden a mejorar la calidad de vida de la población llanera con sobrepeso o que desea tener y mantener hábitos alimenticios más saludables.</font> <br> <br>
+      </div> 
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12  caja2" align="left">
+        <div>
+          <h1 class="titulo">Visión</h1>
+          <font class="contenido" >Para el año 2025 ser la empresa de referencia a nivel regional en la elaboración y preparación de alimentos nutritivos y saludables para la población llanera que desea adquirir y mantener habitos alimenticios saludables en su dia a dia, mediante la elaboración de productos atractivos, deliciosos y novedosos. </font> <br><br>
+        </div>
+      </div>
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12  caja2" align="center">
+        <div >
+          <h1  class="titulo">Conoce más</h1> <br>
+          <a  href="../Contactenos/index.html" class="boton hvr-grow hvr-sweep-to-top">Contáctanos.</a> <br> <br> <br>
+      </div>
       </div> 
     </div> 
-  </div> 
 </header>
 
 
