--- a/Inicio/index.html
+++ b/Inicio/index.html
@@ -20,8 +20,11 @@
   <link rel="shortcut icon" href="../imagenes/logo.png">
 </head>
 <body>
+ 
 <header class="head1">
-
+  <div style="position: absolute;">
+    <img class="portada" src= "../imagenes/portada_cortezas.jpg" alt="fondo">
+  </div>
     <div class="container-fluid">
       <div class="row">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
@@ -50,38 +53,40 @@
         </div>
       </nav>
     </div>
-</header>
-<header class="head0">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-          <div>
-            <div style="position: absolute;">
-              <img class="portada" src= "../imagenes/portada_cortezas.jpg" alt="fondo">
-            </div>
-          <div  class="contenedor_logo" align="center">
-            <img src="../imagenes/logo.png" alt="" class="logo">
-          </div>
-          <div class="contenedor_titulo" align="center">
-              <h1 class="titulo">
-                  Cortezas
-              </h1>
-          </div> <br> <br> <br> <br> <br>
+<!--</header>-->
 
-          <div class="contenedor_info" align="end">
-              <p class="texto">
-                  Vida saludable, <br>
-                  productos saludables, <br>
-                  Villavicencio
-              </p>
-          </div> <br>
-          <div align="center" class="contenedor_boton">
-                <a href="../Nosotros/nosotros.html" class="boton hvr-sweep-to-right hvr-grow" align="center">Conoce más</a>
-          </div>
+
+  <div class="container-fluid">
+    <div class="row">
+      <div style="position: relative; left: 620px;" class="col-12 col-sm-12 col-md-12 col-lg-12">
+         
+        <div class="logobox" >
+        
+        <!--<div  class="contenedor_logo" align="center">-->
+          <img src="../imagenes/logo.png" alt="logo" class="logo"> <!--logo-->
+        <!--</div>-->
+        <!--<div class="contenedor_titulo" align="center">-->
+          <h1 class="titulo">
+                Cortezas
+          </h1>
+        <!--</div> --><br> <br> <br> <br> <br>
+
+        <!--<div class="contenedor_info" align="end">-->
+          <p class="texto">
+            Vida saludable, <br>
+            productos saludables, <br>
+            Villavicencio
+          </p>
+        <!--</div>--> <br>
         </div>  
+        <div align="center" class="contenedor_boton">
+        <a href="../Nosotros/nosotros.html" class="boton hvr-sweep-to-right hvr-grow" align="center">Conoce más</a>
+       </div>
       </div>
     </div>
-  </header>
+  </div>
+</header>
+  
 
 
 
